+ added missing main content container; + included app stylesheet

--- a/src/main/webapp/WEB-INF/th/layout-main.html
+++ b/src/main/webapp/WEB-INF/th/layout-main.html
@@ -5,13 +5,16 @@
 
 <head>
     <title>Thymeleaf Examples</title>
+    <link rel="stylesheet" href="../../style/app.css" th:href="@{/style/app.css}"/>
 </head>
 
 <body>
 
-    <section layout:fragment="content-main">
-        <p>Main content here</p>
-    </section>
+    <div class="container">
+        <section layout:fragment="content-main">
+            <p>Main content here</p>
+        </section>
+    </div>
 
 </body>
 </html>
