--- a/src/main/webapp/WEB-INF/th/layout-main.html
+++ b/src/main/webapp/WEB-INF/th/layout-main.html
@@ -5,6 +5,8 @@
 
 <head>
     <title>Thymeleaf Examples</title>
+    <meta charset="UTF-8" />
+    <base href="/" th:href="@{/}" />
     <link rel="stylesheet" href="../../style/app.css" th:href="@{/style/app.css}"/>
 </head>
 
