+ added head section including app.css

--- a/src/main/webapp/WEB-INF/th/pages/01-userForm.html
+++ b/src/main/webapp/WEB-INF/th/pages/01-userForm.html
@@ -4,6 +4,11 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout-main">
 
+<head>
+    <title>Create a new User</title>
+    <link rel="stylesheet" href="../../../style/app.css" th:href="@{/style/app.css}"/>
+</head>
+
 <body>
 
     <section layout:fragment="content-main">
