- replaced bootstrap stylesheet by the app.css for the second example page

--- a/src/main/webapp/WEB-INF/th/pages/02-userForm.html
+++ b/src/main/webapp/WEB-INF/th/pages/02-userForm.html
@@ -6,7 +6,7 @@
 
 <head>
     <title>Create a new user</title>
-    <link href="../../../style/bootstrap.min.css" th:href="@{/style/bootstrap.min.css}" rel="stylesheet" />
+    <link rel="stylesheet" href="../../../style/app.css" th:href="@{/style/app.css}"/>
     <script src="../../../js/jquery.js" th:src="@{/js/jquery.js}" />
     <script src="../../../js/02-userForm.js" th:src="@{/js/02-userForm.js}" />
 </head>
